[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhem-blink-bridge"
version = "0.1.1"
description = "Local HTTP bridge for Blink cameras used by FHEM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Matthias Sandmann" }
]
dependencies = [
  "blinkpy>=0.25.5,<0.26"
]

[project.scripts]
fhem-blink-bridge = "fhem_blink_bridge.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
